# django-contrib-aderit

./: .gitignore  README.aderit  README.rst  configure.ac  django-admin-aderit  setup.py  setup.py.in
debian/: changelog  changelog.git  control  copyright  patch_for_lucid.diff  python-django-contrib-aderit.lintian-overrides  rules
debian/source/: lintian-overrides
django/contrib/aderit/: __init__.py
django/contrib/aderit/access_account/: __init__.py  admin.py  ajax.py  backends.py  cms_app.py  forms.py  models.py  tokens.py  urls.py  views.py
django/contrib/aderit/access_account/templates/access_account/: access_accountcontrol.html  chprofile.html  chpsw.html  forgotpsw.html  forgotpswreset.html  post_creation.html  profile.html
django/contrib/aderit/generic_utils/: __init__.py  actions.py  currentUserMiddleware.py  export_as_csv_action.py  forms.py  langMiddleware.py  middleware.py  mobileMiddleware.py  views.py
django/contrib/aderit/generic_utils/autologin/: __init__.py  admin.py  models.py  utils.py  views.py
django/contrib/aderit/generic_utils/forms/: __init__.py  fields.py
django/contrib/aderit/generic_utils/models/: __init__.py  fields.py
django/contrib/aderit/generic_utils/templatetags/: __init__.py  breadcrumb.py  currentsitetags.py  currentusergroupstags.py  nice_name.py  order_by.py  smart_if.py  truncatesmart.py  usertags.py
django/contrib/aderit/generic_utils/views/: __init__.py  autologin.py
django/contrib/aderit/news/: admin.py  models.py  urls.py
django/contrib/aderit/news/templates/news/: news.html  (+3 more)
django/contrib/aderit/news/templatetags/: news_tags.py
django/contrib/aderit/questionnaire_extensions/: __init__.py  admin.py  forms.py  models.py  qprocessors.py  urls.py  views.py
django/contrib/aderit/questionnaire_extensions/fixtures/: initial_data.json
django/contrib/aderit/questionnaire_extensions/templatetags/: __init__.py  questionnaire_ext.py
django/contrib/aderit/send_mail/: __init__.py  admin.py  models.py  utils.py  views.py
project_template/: django.wsgi  settings.py  urls.py  wsgi.py
project_template/account/: __init__.py  admin.py  forms.py  models.py  urls.py  utils.py  views.py
project_template/account/fixtures/: initial_data.json
project_template/account/templates/account/: access_accountcontrol.html  account_form_as_ul.html  chprofile.html  chpsw.html  forgot_psw_ok.html  forgotpswreset.html  post_creation.html  profile.html  pswchanged.html  signup.html
project_template/account/templates/registration/: login_as_p.html  login_as_table.html  login_as_ul.html  signup_as_p.html  signup_as_table.html  signup_as_ul.html
project_template/media/: README
project_template/static/css/: style.css
project_template/templates/: base.html  index.html  navigation.html  robots.txt
(+22 files in other folders)
